01-GitOps-and-Observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ghost
  namespace: ghost
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    cert-manager.io/cluster-issuer: "ghost-tls"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mycluster.ddns.net
    secretName: ghost-tls
  rules:
  - host: mycluster.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost
            port:
              number: 2368
